--- a/css/loginStyle.css
+++ b/css/loginStyle.css
@@ -25,6 +25,25 @@ input{
 	transition: all 1s;
 }
 
+form#iniciar input[type=text], form#iniciar input[type=password]{
+	width: 280px;
+	background-color: rgba(253,253,253,0.2);
+	/*color de texto*/
+	color: rgba(255,255,255,1);
+	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	text-shadow:1px 1px 0px #000000;
+	font-weight: lighter;
+	/*color de borde*/
+	border:1px solid rgba(255,255,255,0.5);
+	box-shadow: 0px 1px 4px -1px #FFF inset;
+	padding-left: 20px;
+}
+
+form#iniciar input[type=text]:hover, form#iniciar input[type=password]:hover{
+	background-color: rgba(253,253,253,0.4);
+	cursor: pointer;
+}
 	
 input[type=submit]{
 	width: 300px;
